<resources>
    <string name="app_name">finalWeatherApp5States</string>
    <string name="activity_main">Welcome Screen</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_delhi_india">New Delhi (India)</string>
    <string name="madrid_spain">Madrid (Spain)</string>
    <string name="perth_australia">Perth (Australia)</string>
    <string name="london_uk">London (UK)</string>
    <string name="montreal_canada">Montreal (Canada)</string>
</resources>
