<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/first"
            android:title="@string/montreal_canada"
            android:icon="@drawable/canada"


            android:visible="true" />

        <item android:id="@+id/second"
            android:title="@string/london_uk"
            android:icon="@drawable/united_kingdom"

            />

        <item android:id="@+id/third"
            android:title="@string/perth_australia"
            android:icon="@drawable/australia"
         />

        <item android:id="@+id/forth"
            android:title="@string/new_delhi_india"
            android:icon="@drawable/india"

            />

        <item android:id="@+id/fifth"
            android:title="@string/madrid_spain"
            android:icon="@drawable/spain"
            />

    </group>


</menu>